--- a/application/src/ui/imgs/resource.qrc
+++ b/application/src/ui/imgs/resource.qrc
@@ -1,22 +1,41 @@
 <RCC>
   <qresource prefix="root">
-    <file>icons/eye.svg</file>
-    <file>icons/eye-off.svg</file>
-    <file>icons/next.svg</file>
-    <file>icons/prev.svg</file>
-    <file>icons/sliders.svg</file>
-    <file>icons/file-text.svg</file>
-    <file>icons/edit.svg</file>
-    <file>icons/minus.svg</file>
-    <file>icons/plus.svg</file>
-    <file>icons/Vector.svg</file>
-    <file>icons/x.svg</file>
-    <file>icons/bars-solid-full.svg</file>
-    <file>icons/bell.svg</file>
-    <file>icons/credit-card.svg</file>
-    <file>icons/list.svg</file>
-    <file>icons/log-out.svg</file>
-    <file>icons/pie-chart.svg</file>
-    <file>icons/settings.svg</file>
+    <file>icons/dark_bars-solid-full.svg</file>
+    <file>icons/dark_bell.svg</file>
+    <file>icons/dark_check.svg</file>
+    <file>icons/dark_credit-card.svg</file>
+    <file>icons/dark_detail.svg</file>
+    <file>icons/dark_down.svg</file>
+    <file>icons/dark_edit.svg</file>
+    <file>icons/dark_eye.svg</file>
+    <file>icons/dark_eye-off.svg</file>
+    <file>icons/dark_list.svg</file>
+    <file>icons/dark_log-out.svg</file>
+    <file>icons/dark_pie-chart.svg</file>
+    <file>icons/dark_plus.svg</file>
+    <file>icons/dark_settings.svg</file>
+    <file>icons/dark_sliders.svg</file>
+    <file>icons/dark_trash.svg</file>
+    <file>icons/dark_x.svg</file>
+    <file>icons/light_angle-up.svg</file>
+    <file>icons/light_bars-solid-full.svg</file>
+    <file>icons/light_bell.svg</file>
+    <file>icons/light_check.svg</file>
+    <file>icons/light_credit-card.svg</file>
+    <file>icons/light_detail.svg</file>
+    <file>icons/light_down.svg</file>
+    <file>icons/light_edit.svg</file>
+    <file>icons/light_eye.svg</file>
+    <file>icons/light_eye-off.svg</file>
+    <file>icons/light_list.svg</file>
+    <file>icons/light_log-out.svg</file>
+    <file>icons/light_next.svg</file>
+    <file>icons/light_pie-chart.svg</file>
+    <file>icons/light_plus.svg</file>
+    <file>icons/light_prev.svg</file>
+    <file>icons/light_settings.svg</file>
+    <file>icons/light_sliders.svg</file>
+    <file>icons/light_trash.svg</file>
+    <file>icons/light_x.svg</file>
   </qresource>
 </RCC>
